// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`WalletCreateModal\` component should render correctly when \`isOpen\` prop is \`true\` 1`] = `
<Modal
  contentLabel="Create wallet"
  isOpen={true}
  onClose={[MockFunction]}
>
  <ConnectFunction />
</Modal>
`;

exports[`\`WalletCreateModal\` component should render correctly with default props 1`] = `
<Modal
  contentLabel="Create wallet"
  isOpen={false}
  onClose={[MockFunction]}
>
  <ConnectFunction />
</Modal>
`;
